@@ -127,10 +127,12 @@ Leipzig, 1998.</p>
 </tr>
 </tbody>
 </table>
+<aside class="footnote-list superscript">
 <aside class="footnote superscript align-left" id="not-in-margin" role="note">
 <span class="label"><span class="fn-bracket">[</span>1<span class="fn-bracket">]</span></span>
 <p>The “align-left” class value ensures this footnote is set
 in the main text area.</p>
+</aside>
 </aside>
 </section>
 </main>
