@@ -471,6 +471,7 @@ Python-specific usage examples; begun with &quot;&gt;&gt;&gt;&quot;
 </section>
 <section id="footnotes">
 <h3><a class="toc-backref" href="#toc-entry-17" role="doc-backlink"><span class="sectnum">2.11 </span>Footnotes</a></h3>
+<aside class="footnote-list brackets">
 <aside class="footnote brackets" id="footnote-1" role="note">
 <span class="label"><span class="fn-bracket">[</span>1<span class="fn-bracket">]</span></span>
 <span class="backrefs">(<a role="doc-backlink" href="#footnote-reference-1">1</a>,<a role="doc-backlink" href="#footnote-reference-5">2</a>,<a role="doc-backlink" href="#footnote-reference-9">3</a>)</span>
@@ -506,6 +507,7 @@ Here's a reference to the next footnote: <a class="footnote-reference brackets" 
 <span class="label"><span class="fn-bracket">[</span>4<span class="fn-bracket">]</span></span>
 <p>Here's an unreferenced footnote, with a reference to a
 nonexistent footnote: <a href="#system-message-2"><span class="problematic" id="footnote-reference-8">[5]_</span></a>.</p>
+</aside>
 </aside>
 </section>
 <section id="citations">
@@ -823,6 +825,7 @@ allowed (e.g. inside a directive).</p>
 </section>
 <section id="target-footnotes">
 <h4><a class="toc-backref" href="#toc-entry-59" role="doc-backlink"><span class="sectnum">2.14.6 </span>Target Footnotes</a></h4>
+<aside class="footnote-list brackets">
 <aside class="footnote brackets" id="footnote-7" role="note">
 <span class="label"><span class="fn-bracket">[</span>7<span class="fn-bracket">]</span></span>
 <span class="backrefs">(<a role="doc-backlink" href="#footnote-reference-18">1</a>,<a role="doc-backlink" href="#footnote-reference-19">2</a>,<a role="doc-backlink" href="#footnote-reference-20">3</a>,<a role="doc-backlink" href="#footnote-reference-26">4</a>)</span>
@@ -875,6 +878,7 @@ allowed (e.g. inside a directive).</p>
 <aside class="footnote brackets" id="footnote-19" role="note">
 <span class="label"><span class="fn-bracket">[</span><a role="doc-backlink" href="#footnote-reference-33">19</a><span class="fn-bracket">]</span></span>
 <p><a class="reference external" href="https://html.spec.whatwg.org/multipage/edits.html">https://html.spec.whatwg.org/multipage/edits.html</a></p>
+</aside>
 </aside>
 </section>
 <section id="replacement-text">
@@ -1581,9 +1585,11 @@ chemicals.</p>
 <cite>acronymes</cite>. In HTML, the &lt;acronym&gt; tag is obsolete and authors are
 advised to use &lt;abbr&gt; instead. The HTML5 writer uses &lt;abbr&gt; for Docutil's
 &lt;abbreviation&gt; element.</p>
+<aside class="footnote-list brackets">
 <aside class="footnote brackets" id="footnote-6" role="note">
 <span class="label"><span class="fn-bracket">[</span><a role="doc-backlink" href="#footnote-reference-11">‡</a><span class="fn-bracket">]</span></span>
 <p>Irish Organic Farmers and Growers Association</p>
+</aside>
 </aside>
 </dd>
 <dt>ruby, rt, rp</dt>
@@ -1710,6 +1716,7 @@ a substitution.</p>
 </blockquote>
 </dd>
 </dl>
+<aside class="footnote-list brackets">
 <aside class="footnote brackets" id="attribute-optional" role="note">
 <span class="label"><span class="fn-bracket">[</span>5<span class="fn-bracket">]</span></span>
 <span class="backrefs">(<a role="doc-backlink" href="#footnote-reference-10">1</a>,<a role="doc-backlink" href="#footnote-reference-14">2</a>,<a role="doc-backlink" href="#footnote-reference-16">3</a>,<a role="doc-backlink" href="#footnote-reference-17">4</a>)</span>
@@ -1721,6 +1728,7 @@ to inline roles. See <a class="reference external" href="https://docutils.source
 <span class="backrefs">(<a role="doc-backlink" href="#footnote-reference-12">1</a>,<a role="doc-backlink" href="#footnote-reference-13">2</a>,<a role="doc-backlink" href="#footnote-reference-15">3</a>)</span>
 <p>Requires support for attributes to inline
 roles to make sense.</p>
+</aside>
 </aside>
 </section>
 <section id="indicating-edits">
